# hgeom

./: .clang-format  .gitignore  .pre-commit-config.yaml  .run_tests_on_file_config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  dodo.py  noxfile.py  pyproject.toml  pyrightconfig.json  release.config.js  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build_publish.yml  build_test_publish.yml  semantic-release.yaml  wheels.yaml
hgeom/: __init__.py  timer.py
hgeom/align/: line_aligner.cpp  py_token_align.cpp
hgeom/bvh/: bvh.cpp  bvh.hpp  bvh_algo.hpp  bvh_nd.cpp  bvh_test.cpp
hgeom/cluster/: cookie_cutter.cpp
hgeom/geom/: bcc.cpp  bcc.hpp  expand_xforms.cpp  miniball.cpp  miniball.hpp  primitive.hpp  primitive_test.cpp  xform_dist.cpp
hgeom/homog/: __init__.py  hgeom.py  quat.py  util.py
hgeom/phmap/: phmap.cpp  phmap.hpp
hgeom/rms/: qcp.cpp  qcp.hpp  qcptest.cpp
hgeom/tests/align/: test_line_align.py  test_line_tokenizer.py
hgeom/tests/bvh/: test_bvh.py  test_bvh_nd.py
hgeom/tests/cluster/: test_cluster.py
hgeom/tests/geom/: test_bcc.py  test_expand_xforms.py  test_geom.py
hgeom/tests/phmap/: test_phmap.py
hgeom/tests/rms/: test_qcp.py
hgeom/tests/util/: test_pybind_types.py  test_util.py
hgeom/tests/xbin/: test_smear.py  test_xbin.py  test_xbin_util.py
hgeom/util/: Timer.hpp  dilated_int.hpp  dilated_int_test.cpp  global_rng.hpp  numeric.hpp  pybind_types.hpp  pybind_types_test.cpp  str.hpp  template_math.hpp  types.hpp
hgeom/xbin/: smear.cpp  smear.hpp  xbin.cpp  xbin.hpp  xbin_test.cpp  xbin_util.cpp
ide/: hgeom.sublime-project  willutil_cpp.sublime-project
willutil_cpp/: __init__.py  setup.py  timer.py
willutil_cpp/bvh/: __init__.py  bvh.cpp  bvh.hpp  bvh_algo.hpp  bvh_nd.cpp  bvh_test.cpp
willutil_cpp/cluster/: __init__.py  cookie_cutter.cpp
willutil_cpp/geom/: __init__.py  bcc.cpp  bcc.hpp  expand_xforms.cpp  miniball.cpp  miniball.hpp  primitive.hpp  primitive_test.cpp  xform_dist.cpp
willutil_cpp/homog/: __init__.py  hgeom.py  quat.py  thgeom.py
willutil_cpp/phmap/: __init__.py  phmap.cpp  phmap.hpp
willutil_cpp/rms/: __init__.py  qcp.cpp  qcp.hpp  qcptest.cpp
willutil_cpp/tests/bvh/: test_bvh.py  test_bvh_nd.py
willutil_cpp/tests/cluster/: test_cluster.py
willutil_cpp/tests/cpp/bvh/: test_bvh.py
willutil_cpp/tests/cpp/geom/: test_bcc.py
willutil_cpp/tests/cpp/phmap/: test_phmap.py
willutil_cpp/tests/cpp/util/: test_pybind_types.py
willutil_cpp/tests/cpp/xbin/: test_smear.py  test_xbin.py
willutil_cpp/tests/geom/: test_bcc.py  test_expand_xforms.py  test_geom.py
willutil_cpp/tests/phmap/: test_phmap.py
willutil_cpp/tests/rms/: test_qcp.py
willutil_cpp/tests/util/: test_pybind_types.py  test_util.py
willutil_cpp/tests/xbin/: test_xbin.py  test_xbin_util.py
willutil_cpp/util/: Timer.hpp  dilated_int.hpp  dilated_int_test.cpp  global_rng.hpp  numeric.hpp  pybind_types.hpp  pybind_types_test.cpp  str.hpp  template_math.hpp  types.hpp
willutil_cpp/xbin/: __init__.py  smear.cpp  smear.hpp  xbin.cpp  xbin.hpp  xbin_test.cpp  xbin_util.cpp
