[build-system]
requires = ['scikit-build-core', 'pybind11', 'cibuildwheel']
build-backend = 'scikit_build_core.build'

[project]
name = 'hgeom'
dynamic = ["version"]
requires-python = '>=3.9'
dependencies = [
    'numpy',
]
[project.optional-dependencies]
dev = ["pre-commit", "commitizen", "ruff", "validate-pyproject"]
release = ["python-semantic-release"]

[tool.cibuildwheel]
# build-verbosity = 1
skip = ["*-macosx_universal2"]

# [tool.cibuildwheel.linux]
# before-build = "yum install -y python3-devel"
# environment = { CMAKE_ARGS = "-DPython_ROOT_DIR=/opt/python/cp39-cp39/" }

# [tool.cibuildwheel.windows]
# environment = { CMAKE_ARGS = "-DPython_ROOT_DIR=${env:PYTHON}" }

# [tool.cibuildwheel.macos]
# environment = { CMAKE_ARGS = "-DPython_ROOT_DIR=$(python3 -c 'import sys; print(sys.prefix)')" }

[tool.semantic_release]
version_variable = "hgeom/__init__.py:__version__"
branch = "main"
upload_to_pypi = false  # you're doing that manually
build_command = false   # skip build

[tool.pytest.ini_options]
minversion = '8'
addopts = ''
pythonpath = ['.']
testpaths = ['homog']

[tool.yapf]
based_on_style = 'pep8'
indent_width = 4
column_limit = 111
blank_line_before_nested_class_or_def = true
blank_lines_around_top_level_definition = 1
arithmetic_precedence_indication = true

[tool.ruff]
lint.ignore = [
   'E731', #  [ ] Do not assign a `lambda` expression, use a `def`
   'E402', #  [ ] Module level import not at top of file
   'E741', #  [ ] Ambiguous variable name: `I`
   'E701', #  [ ] Multiple statements on one line (colon)
   'F403', #  [ ] `from Attention_module import *` used; unable to detect undefined names
   'F405',
   'F821',
   'F841',

]
lint.dummy-variable-rgx = '^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?)|print)$'
line-length = 113
target-version = 'py39'
format.quote-style = 'single'
format.indent-style = 'space'
format.docstring-code-format = true
